plugins {
    id 'application'
    id 'checkstyle'
    id "io.sentry.jvm.gradle" version '6.4.0'
    id 'java'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

sourceSets {
    main {
        java {
            srcDirs = ['src']
        }
        resources {
            srcDirs = ['resources']
        }
    }
    test {
        java {
            srcDirs = ['unittests']
        }
        resources {
            srcDirs = ['testresources']
        }
    }
}

dependencies {
    implementation project(":Common")
    implementation "org.megamek:megamek"
    implementation 'org.apache.logging.log4j:log4j-api:2.25.4'
    implementation 'org.apache.logging.log4j:log4j-core:2.25.4'
    implementation 'jakarta.annotation:jakarta.annotation-api:3.0.0'
}

compileJava {
    options.compilerArgs += ['--enable-preview']
}

checkstyle {
    toolVersion = '13.4.0'
    configFile = file("${rootDir}/config/checkstyle/checkstyle.xml")
    configProperties = [
            'suppressionFile': file("${rootDir}/config/checkstyle/checkstyle-suppressions.xml")
    ]
    maxWarnings = 0  // Fail on any warning
    maxErrors = 0    // Fail on any error
}

tasks.withType(Checkstyle).configureEach {
    minHeapSize = "1g"
    maxHeapSize = "4g"
}
